ajustes em cards e em aba 'quem somos'

--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ body {
   }
   
   .carousel .carousel-inner {
-    padding: 09px; /* Espaçamento para separar os cards das setas de navegação */
+    padding: 09px; /* Separa os cards das setas de navegação */
   }
   
   
