--- a/style.css
+++ b/style.css
@@ -153,13 +153,54 @@ body {
     }
   }
 
-/*CARROSSEL DE CARDS*/
-  .card-group .card {
-    margin: 10px; /* Espaçamento entre os cards */
-  }
   
-  .carousel .carousel-inner {
-    padding: 09px; /* Separa os cards das setas de navegação */
-  }
+  /*QUEM SOMOS*/
+.quem-somos-section .content {
+  display: flex;
+  justify-content: space-between; /* Espaço entre o texto e a imagem */
+  align-items: center;
+  flex-wrap: wrap; /* Para garantir que o layout seja responsivo */
+}
+
+.text-container {
+  flex: 1;
+  text-align: center; /* Centraliza o texto dentro do container */
+  color: #9fcd3b;
+}
+
+.testimonials {
+  margin-top: 20px;
+  font-style: italic;
+  color: rgb(144, 199, 76);
+}
+
+.image-container {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
+/* Aumenta o espaço entre os cards */
+.card-group {
+  gap: 2rem; /* Ajuste o valor conforme necessário */
+}
+
+/* Faz a imagem ocupar mais espaço no card */
+.card-img-top {
+  height: 200px; /* Ajuste a altura da imagem conforme necessário */
+  object-fit: cover; /* Faz com que a imagem ocupe toda a área disponível sem distorcer */
+}
+
+/* Opcional: Aumenta a altura do card se necessário */
+.card {
+  height: 400px; /* Ajuste a altura do card conforme necessário */
+}
+
   
   
