--- a/style.css
+++ b/style.css
@@ -1,48 +1,20 @@
-/*BACKGROUND*/
-body {
-  background-color: rgb(245, 248, 224);
-  font-family: "Lexend", serif;
-}
-
-
 /* NAVBAR */
-/* Centralizar os itens da navbar */
-.navbar-nav {
-    margin: 0 auto; /* Centraliza todo o conteúdo da navbar */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-/* Ajuste para a logo */
-.navbar-brand {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-/* Espaço nas margens dos itens */
-.nav-item {
-    margin-left: 15px;
-    margin-right: 15px;
-}
-/* Centralizar os itens na navbar */
-.navbar-nav {
-    justify-content: center; 
-    align-items: center;     
-}
-
-/* Espaçamento extra na navbar */
-.navbar {
-    min-height: 90px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
-.navbar {
-    height: 7.5vh;
-}
-
 /** Ocultar a seta padrão do dropdown **/
+.navbar-nav .nav-link {
+    color: #e4d389; /* Cor para o texto dos links da navbar */
+  }
+
+  .navbar-nav .nav-link:hover {
+    color:  #e4d389; /* Cor para o texto ao passar o mouse */
+  }
+
+  .navbar-nav .nav-item.dropdown .nav-link {
+    color:  #e4d389; /* Cor para os itens dropdown */
+  }
+
+  .navbar-nav .nav-item.dropdown .nav-link:hover {
+    color:  #e4d389; /* Cor ao passar o mouse no item dropdown */
+  }
 .dropdown-toggle-no-arrow::after {
     display: none;
 }
@@ -115,70 +87,5 @@ body {
 .tooltip-recado:hover::after {
   opacity: 1;
 }
-
-
-/* CARROSSEL */
-.carousel-item {
-  position: relative;
-  height: 100%; 
-}
-
-.carousel-caption {
-  position: absolute;
-  bottom: 10px;  
-  left: 10px;    
-  right: 10px;
-  z-index: 10;  
-  color: white;  
-}
-
-.custom-carousel .carousel-inner {
-  height: 100%;
-}
-
-/* Ajuste Imagem Carousel Produtos */
-.img-carousel {
-  height: 660px;
-  width: 400px;
-}
-
-/*TEXTO ANIMADO*/
-.texto-animado {
-    overflow: hidden;
-    white-space: nowrap;
-  }
-  
-  .texto-animado p {
-    display: inline-block;
-    padding-left: 100%;
-    animation: loopTexto 20s linear infinite;
-    font-size: 4.5rem; 
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: #eeb752; /* Ajuste a cor do texto */
-  }
-  
-  @keyframes loopTexto {
-    0% {
-      transform: translateX(0%);
-    }
-    100% {
-      transform: translateX(-100%);
-    }
-  }
-
-/*CARROSSEL DE CARDS*/
-  .card-group .card {
-    margin: 10px; /* Espaçamento entre os cards */
-  }
-  
-  .carousel .carousel-inner {
-    padding: 09px; /* Separa os cards das setas de navegação */
-  }
-  .titulo 
-  {
-    font-size: 50px;
-    color:#eeb752;
-
-  }
   
   
