--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@
     /* Alinha a linha ao lado esquerdo */
 }
 
-/*Tooltip do livro de receitas*/
+/* Tooltip do livro de receitas */
 .tooltip-recado {
   position: relative;
   cursor: pointer;
@@ -70,19 +70,25 @@
 .tooltip-recado::after {
   content: attr(data-recado);
   position: absolute;
-  bottom: 120%; /* Ajuste a posição do tooltip acima da logo */
+  bottom: -30px; /* Ajuste a distância conforme necessário */
   left: 50%;
   transform: translateX(-50%);
-  background-color: #333;
+  background-color: rgba(0, 0, 0, 0.7);
   color: #fff;
   padding: 5px 10px;
-  border-radius: 4px;
-  opacity: 0;
+  border-radius: 5px;
+  font-size: 12px;
   white-space: nowrap;
-  pointer-events: none;
-  transition: opacity 0.3s;
-  font-size: 14px;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s, visibility 0.3s;
 }
+
+.tooltip-recado:hover::after {
+  opacity: 1;
+  visibility: visible;
+}
+
 
 .tooltip-recado:hover::after {
   opacity: 1;
